--- a/src/patternfly/components/Nav/nav-section-title.hbs
+++ b/src/patternfly/components/Nav/nav-section-title.hbs
@@ -1,6 +1,13 @@
-<{{#if nav-section-title--type}}{{nav-section-title--type}}{{else}}h2{{/if}} class="{{pfv}}nav__section-title{{#if nav-section-title--modifier}} {{nav-section-title--modifier}}{{/if}}"
+{{setTag nav-section-title--type nav-section-title--type 'h2'}}
+
+<{{tag}} class="{{pfv}}nav__section-title{{#if nav-section-title--modifier}} {{nav-section-title--modifier}}{{/if}}"
+  id="{{ternary nav-section-title--id nav-section-title--id (dasherize nav--id nav-section--id nav-section-title--text)}}"
   {{#if nav-section-title--attribute}}
     {{{nav-section-title--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
-</{{#if nav-section-title--type}}/{{nav-section-title--type}}{{else}}h2{{/if}}>
+  {{#if nav-section-title--text}}
+    {{{nav-section-title--text}}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
+</{{tag}}>
