--- a/src/patternfly/components/Nav/nav-subnav.hbs
+++ b/src/patternfly/components/Nav/nav-subnav.hbs
@@ -1,9 +1,15 @@
 <section class="{{pfv}}nav__subnav{{#if nav-subnav--modifier}} {{nav-subnav--modifier}}{{/if}}"
+  aria-labelledby="{{ternary nav-subnav--aria-labelledby nav-subnav--aria-labelledby nav-item--id}}"
+  {{ternary (concat nav-item--expanded nav-item--IsExpanded) '' 'hidden'}}
   {{#if nav-subnav--attribute}}
     {{{nav-subnav--attribute}}}
+  {{/if}}>
+  {{#if nav-section-title--text}}
+    {{> nav-section-title nav-section-title--id=(dasherize nav--id nav-section--id nav-section-title--text)}}
   {{/if}}
-  {{#unless nav-item--expanded}}
-    hidden
-  {{/unless}}>
-  {{> @partial-block}}
+  {{#> nav-list (reset nav-item--IsExpandable nav-item--expanded nav-item--IsExpandable nav-item--IsExpanded)}}
+    {{#if @partial-block}}
+      {{> @partial-block}}
+    {{/if}}
+  {{/nav-list}}
 </section>
