fix(modal): add support for status modifiers on title

--- a/src/patternfly/components/ModalBox/modal-box-title.hbs
+++ b/src/patternfly/components/ModalBox/modal-box-title.hbs
@@ -1,4 +1,9 @@
-<{{#if modal-box-title--type}}{{modal-box-title--type}}{{else}}h1{{/if}} class="{{pfv}}modal-box__title{{#if modal-box-title--IsIcon}} pf-m-icon{{/if}}{{#if modal-box-title--modifier}} {{modal-box-title--modifier}}{{/if}}"
+<{{#if modal-box-title--type}}{{modal-box-title--type}}{{else}}h1{{/if}} class="{{pfv}}modal-box__title
+  {{#if modal-box-title--IsIcon}} pf-m-icon{{/if}}
+  {{#if modal-box--HasStatusTitle}}
+    {{> modal-box--status-modifiers}}
+  {{/if}}
+  {{#if modal-box-title--modifier}} {{modal-box-title--modifier}}{{/if}}"
   {{#if modal-box-title--attribute}}
     {{{modal-box-title--attribute}}}
   {{/if}}>
