--- a/src/patternfly/components/ModalBox/modal-box.hbs
+++ b/src/patternfly/components/ModalBox/modal-box.hbs
@@ -1,4 +1,8 @@
-<div class="{{pfv}}modal-box{{#if modal-box--IsDangerAlert}} pf-m-danger{{else if modal-box--IsWarningAlert}} pf-m-warning{{else if modal-box--IsSuccessAlert}} pf-m-success{{else if modal-box--IsInfoAlert}} pf-m-info{{else if modal-box--IsCustomAlert}} pf-m-custom{{/if}}{{#if modal-box--modifier}} {{modal-box--modifier}}{{/if}}"
+<div class="{{pfv}}modal-box
+  {{#unless modal-box--HasStatusTitle}}
+    {{> modal-box--status-modifiers}}
+  {{/unless}}
+  {{#if modal-box--modifier}} {{modal-box--modifier}}{{/if}}"
   role="dialog"
   aria-modal="true"
   {{#if modal-box--attribute}}
